k8s-config/database.yaml
# 命名空间
apiVersion: v1
kind: Namespace
metadata:
    name: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql-deployment
    namespace: database
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mysql
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
                - name: mysql
                  image: mysql:latest
                  ports:
                      - containerPort: 3306
                  volumeMounts:
                      - name: mysql-storage
                        mountPath: /var/lib/mysql
            volumes:
                - name: mysql-storage
                  persistentVolumeClaim:
                      claimName: mysql-pvc
---

apiVersion: v1
kind: Service
metadata:
    name: mysql-service
    namespace: database
spec:
    type: NodePort
    selector:
        app: mysql
    ports:
        - protocol: TCP
          port: 3306
          targetPort: 3306
          nodePort: 30036
